--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-API_URL = https://khalilovyusif-server.onrender.com
+# REACT_APP_API_URL=https://khalilovyusif-server.onrender.com 
+REACT_APP_API_URL=http://localhost:5005
