--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# REACT_APP_API_URL=https://khalilovyusif-server.onrender.com 
-REACT_APP_API_URL=http://localhost:5005
+REACT_APP_API_URL=https://khalilovyusif-server.onrender.com 
+# REACT_APP_API_URL=http://localhost:5005
